--- a/03-java-operator/.project
+++ b/03-java-operator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>02-java-comments-identifiers-basicDataTypes</name>
+	<name>03-java-operator</name>
 	<comment></comment>
 	<projects>
 	</projects>
