--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,6 @@
 		<module>13-java-exception</module>
 		<module>14-java-collection</module>
 		<module>15-java-io</module>
+		<module>16-java-thread</module>
 	</modules>
 </project>
