--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<module>07-java-class-extends</module>
 		<module>08-java-array</module>
 		<module>09-java-abstract-interface-inner</module>
-		<module>10-java-string</module>
+		<module>10-java-string-math</module>
 		<module>11-java-packaging-class</module>
 		<module>12-java-date-calendar-dateformat</module>
 		<module>13-java-exception</module>
