--- a/10-java-string/.project
+++ b/10-java-string/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>10-java-string</name>
+	<name>10-java-string-math</name>
 	<comment></comment>
 	<projects>
 	</projects>
